--- a/ExcursionsInMultiplicativeNT-Typos/contenu-typos.html
+++ b/ExcursionsInMultiplicativeNT-Typos/contenu-typos.html
@@ -101,7 +101,7 @@ MathJax.Hub.Config({
   <blockquote>
     Thanks are due to J. Avigdor from Charenton Le Pont and to
     <a href="https://www.allenstenger.com/">Allen
-    Stenger</a>. (Last update: February 10th, 2024)
+    Stenger</a>. (Last update: July 13th, 2024)
     </blockquote>
 
 
@@ -196,6 +196,12 @@ This inequality is false when $p=2$, where it should be "$1 + \alpha_2
     </div></li>
 
 
+  <li><span class="titre">P. 56, line 3</span>.
+    <div class="typo">
+   ``there exists forcibly'': ``forcibly'' is the wrong word, it
+   should be ``necessarily''.
+   </div></li>
+
   <li><span class="titre">P. 56, Exercise 5-10, part 3</span>.
     <div class="typo">
     For the range of
@@ -217,6 +223,12 @@ and $g$ vanishes at $1$'',
     <div class="typo">
 <span style="color:#6633CC;font-weight:bold">Theorem 6.1</span>
  should be <span style="color:#6633CC;font-weight:bold">Corollary 6.1</span>.
+    </div></li>
+
+
+<li><span class="titre">P. 87, line 3 from bottom</span>.
+    <div class="typo">
+    ``the problematic we address'': ``problematic'' is the wrong word, it should be ``problem''.
     </div></li>
 
 
@@ -515,6 +527,22 @@ should be
 $\displaystyle \sqrt{2}(\log Q + O^*(7/6))$ when $Q \ge 2)$
 </span> (the variable name is $Q$ and not $x$).
     </div></li>
+
+  <li><span class="titre">P. 147, last line of Theorem 13.4 statement</span>.
+    <div class="typo"> 
+      ``where $C$ is as in Theorem 13.3.'' should be
+``where $C$ is as in Theorem 13.3, taking $g(d) = f(d)/d$.''
+    </div></li>
+
+  <li><span class="titre">P. 148, lines 6--7</span>.
+    <div class="typo"> 
+      <span style="color:#6633CC;font-weight:bold">$Q$</span>
+      should be 
+<span style="color:#6633CC;font-weight:bold">$D$</span> throughout.
+    </div></li>
+
+
+
 
   <li><span class="titre">P. 149</span>.
     <div class="typo">
@@ -945,7 +973,7 @@ $\mathscr{C}_2$</span>.
 
  <li><span class="titre">P. 223, line 2 from bottom</span>.
     <div class="typo">
-      The sedond factor
+      The second factor
       <span style="color:#6633CC;font-weight:bold">
 $\displaystyle\left(1-\frac{n}{x+L}\right)$</span>
  should be <span style="color:#6633CC;font-weight:bold">
@@ -1007,6 +1035,21 @@ $ |\zeta(\sigma)|^3 |\zeta(\sigma + i t)|^4 |\zeta(\sigma + 2 i t)|
 (lower bound is $1$, not $0$).
     </div></li>
 
+
+<li><span class="titre">P. 235, Exercise 23-1</span>.
+    <div class="typo">
+   The initial sentence <span style="color:#6633CC;font-weight:bold">
+``Let $D(t) = \sum_{n \ge 1} a_n n^{i t}$ and $D^*(t) = \sum_{n \ge 1} a^*_n n^{i t}$
+be two Dirichlet series, both absolutely convergent for $\Re s \ge
+   0$''</span>
+   is confusing and, strictly speaking,
+   wrong. It can be <span style="color:#6633CC;font-weight:bold">``Let $D(s) = \sum_{n \ge 1} a_n n^{-s}$ and $D^*(s) = \sum_{n \ge 1} a^*_n n^{-s}$
+be two Dirichlet series, both absolutely convergent for $\Re s \ge
+   0$''</span>, but later, one should replace $D(t)$ by $D(it)$ and
+   $D^*(2t)$ by $D^*(2it)$. 
+   Another way to fix this is to simply say <span style="color:#6633CC;font-weight:bold">``Let $D(t) = \sum_{n \ge 1} a_n n^{i t}\) and \(D^*(t) = \sum_{n \ge 1} a^*_n n^{i t}$
+be two series, both absolutely convergent for all real $t$.''</span>
+    </div></li>
 
 <li><span class="titre">P. 235, line 10</span>.
     <div class="typo">
@@ -1088,6 +1131,22 @@ $$
 </span>.
     </div></li>
 
+<li><span class="titre">P. 240, Exercise 23-9</span>.
+    <div class="typo">
+   <span style="color:#6633CC;font-weight:bold">
+     $\mathscr{C}_1$
+</span>
+ should be <span style="color:#6633CC;font-weight:bold">
+     $\sqrt{2}\mathscr{C}_1$.
+</span>.
+    </div></li>
+
+<li><span class="titre">P. 243, line 6</span>.
+    <div class="typo">
+   ``due to the K.~Iseki'' should be``due to K.~Iseki''.
+    </div></li>
+
+
 <li><span class="titre">P. 244, line 4</span>.
     <div class="typo">
    <span style="color:#6633CC;font-weight:bold">
@@ -1102,7 +1161,7 @@ $$
     <div class="typo">
 Several $\pm$ signs are not what they should be and some more details
 are called for. Here is a corrected
-version
+version:
 <br>
   <span style="color:#6633CC;font-weight:bold">
 ``We use Theorem 6.2 with $h(t)=(-\log t)/t$, $f(n)=\mu(n)$ and $g(n)=1$. On recalling Lemma 7.1
@@ -1150,24 +1209,449 @@ version
  should be <span style="color:#6633CC;font-weight:bold">stuck</span>.
     </div></li>
 
-  <li><span class="titre">P. 275, line 6 from bottom</span>.
+  <li><span class="titre">P. 251, line 7 from bottom</span>.
     <div class="typo">
-      <span style="color:#6633CC;font-weight:bold">``rhythm of convergence''</span>
- should be <span style="color:#6633CC;font-weight:bold">``rate of convergence''</span>.
+      <span style="color:#6633CC;font-weight:bold">``to every
+	integers''</span> should be 
+	<span style="color:#6633CC;font-weight:bold">``to every integer''</span>.
     </div></li>
 
-  <li><span class="titre">P. 293, line 3 from bottom</span>.
+  <li><span class="titre">P. 251, last displayed formula</span>.
     <div class="typo">
-      <span style="color:#6633CC;font-weight:bold">looses</span>
- should be <span style="color:#6633CC;font-weight:bold">loses</span>.
+        <span style="color:#6633CC;font-weight:bold">$\zeta(2 -
+	  a)$</span> 
+	should be  <span style="color:#6633CC;font-weight:bold">$C \zeta(2 - a)$</span>.
     </div></li>
 
-  <li><span class="titre">P. 294, Exercise 29.8 title</span>.
+  <li><span class="titre">P. 252, line 4</span>.
+    <div class="typo">
+        <span style="color:#6633CC;font-weight:bold">Exr. 3-4</span> 
+	should be  <span style="color:#6633CC;font-weight:bold">Exer. 3-6</span>.
+    </div></li>
+
+  <li><span class="titre">P. 252, Exercise25-2 part 1</span>.
+    <div class="typo">
+        <span style="color:#6633CC;font-weight:bold">any nonnegative $\sigma$</span> 
+	should be  <span style="color:#6633CC;font-weight:bold">any
+	positive $\sigma$</span>,
+as $\sigma=0$ causes a division by 0.
+    </div></li>
+
+  <li><span class="titre">P. 255, line 13</span>.
+    <div class="typo">
+        <span style="color:#6633CC;font-weight:bold">
+	  $\sum_{\genfrac{}{}{0 pt}{}{d \le D}{d | P(z)}} \mu(d)
+	  $
+	</span> 
+	should be  <span style="color:#6633CC;font-weight:bold">
+	  $\sum_{\genfrac{}{}{0 pt}{}{d \le D}{d | Q}} \mu(d)
+	  $
+	</span>.
+    </div></li>
+
+  <li><span class="titre">P. 258, line 1</span>.
+    <div class="typo">
+        <span style="color:#6633CC;font-weight:bold">
+	  ``The sieve problematic''
+	</span> 
+	should be  <span style="color:#6633CC;font-weight:bold">
+	  ``The sieve method''
+	</span>.
+    </div></li>
+
+  <li><span class="titre">P. 258, line 1</span>.
+    <div class="typo">
+        <span style="color:#6633CC;font-weight:bold">
+	  ``The sieve problematic''
+	</span> 
+	should be  <span style="color:#6633CC;font-weight:bold">
+	  ``The sieve method''
+	</span>.
+    </div></li>
+
+  <li><span class="titre">P. 258, reference [5]</span>.
+    <div class="typo">
+        This reference is to a book and should be formatted as a book.
+    </div></li>
+
+  <li><span class="titre">P. 260, line 3</span>.
+    <div class="typo">
+        <span style="color:#6633CC;font-weight:bold">
+	  $(\rho - \rho^{-1})\rho^{-2k}$
+	</span> 
+	should be  <span style="color:#6633CC;font-weight:bold">
+	  $(\rho + \rho^{-1})\rho^{-2k}$
+	</span>, (wrong sign).
+    </div></li>
+
+  <li><span class="titre">P. 260, line 8 from bottom</span>.
+    <div class="typo">
+        <span style="color:#6633CC;font-weight:bold">
+	  $N_k \ge (1 + \sqrt{2})^k / 2$
+	</span> 
+	should be  <span style="color:#6633CC;font-weight:bold">
+	  $N_k \le (1 + \sqrt{2})^k / 2$
+	</span>.
+    </div></li>
+
+  <li><span class="titre">P. 260, line 2 from bottom</span>.
+    <div class="typo">
+        <span style="color:#6633CC;font-weight:bold">
+	  ``coprime positive integer''
+	</span> 
+	should be  <span style="color:#6633CC;font-weight:bold">
+	  ``coprime positive integers''
+	</span>.
+    </div></li>
+
+  <li><span class="titre">P. 261, line 5</span>.
+    <div class="typo">
+        <span style="color:#6633CC;font-weight:bold">
+	  ``the points $h \alpha$ are distant from one another by at least $1/(2q)$''
+	</span> 
+	should be  <span style="color:#6633CC;font-weight:bold">
+	  ``the points $h \alpha$ modulo 1 are distant from one another by at least $1/(2q)$''
+	</span>.
+    </div></li>
+
+  <li><span class="titre">P. 262, line 9</span>.
+    <div class="typo">
+        <span style="color:#6633CC;font-weight:bold">
+	  ``loose a logarithmic factor''
+	</span> 
+	should be  <span style="color:#6633CC;font-weight:bold">
+	  ``lose a logarithmic factor''
+	</span>.
+    </div></li>
+
+  <li><span class="titre">P. 262, line 9</span>.
+    <div class="typo">
+        <span style="color:#6633CC;font-weight:bold">
+	  ``loose a logarithmic factor''
+	</span> 
+	should be  <span style="color:#6633CC;font-weight:bold">
+	  ``lose a logarithmic factor''
+	</span>.
+    </div></li>
+
+
+  <li><span class="titre">P. 264, line 7 from bottom</span>.
+    <div class="typo">
+      <span style="color:#6633CC;font-weight:bold">
+	``forcibly larger than or equal to $z$''
+      </span>
+      should be 
+      <span style="color:#6633CC;font-weight:bold">
+	``larger than or equal to $z$''
+      </span>.
+    </div></li>
+
+  <li><span class="titre">PP. 264--265</span>.
+    <div class="typo">
+      The symbol
+      <span style="color:#6633CC;font-weight:bold">
+	$Q$
+      </span>
+      should be 
+      <span style="color:#6633CC;font-weight:bold">
+	$P(z)$
+      </span>, twice.
+    </div></li>
+
+  <li><span class="titre">P. 265, proof of Theorem 26.3</span>.
+    <div class="typo">
+      The function $g$ to use in the application of Theorem 26.2
+      is not stated; it should be $g(n) = e(\rho m)$.
+  </div></li>
+
+  <li><span class="titre">P. 266, line 13</span>.
+    <div class="typo">
+      <span style="color:#6633CC;font-weight:bold">
+	$Q\le X/n$
+      </span>
+      should be 
+      <span style="color:#6633CC;font-weight:bold">
+	$Q\le x/n$
+      </span>, (lower case $x$).
+    </div></li>
+
+  <li><span class="titre">P. 266, line before last displayed equation</span>.
+    <div class="typo">
+      <span style="color:#6633CC;font-weight:bold">
+	``On gathering our estimates, we have reached''
+      </span>
+      should be 
+      <span style="color:#6633CC;font-weight:bold">
+	``On selecting $z=\exp\frac12\sqrt{\log x}$ and on gathering our estimates, we have reached''
+      </span>.
+    </div></li>
+
+  <li><span class="titre">P. 268, line 6</span>.
+    <div class="typo">
+      <span style="color:#6633CC;font-weight:bold">
+	``if only finitely primes $p$ where such that $\{\rho p\} \notin [a,b]$''
+      </span>
+      should be 
+      <span style="color:#6633CC;font-weight:bold">
+	``if there are only finitely primes $p$ such that $\{\rho p\} \notin [a,b]$''
+      </span>.
+    </div></li>
+
+  <li><span class="titre">P. 273, lines 1--2</span>.
+    <div class="typo">
+      <span style="color:#6633CC;font-weight:bold">
+	``the sequence $(\cos 2 \pi \rho n)$ where $n$ ranges the irregular integers dense in $[-1, 1]$''
+      </span>
+      should be 
+      <span style="color:#6633CC;font-weight:bold">
+	``the sequence $(\cos 2 \pi \rho n)_n$ where $n$ ranges the
+	irregular integers is dense in $[-1, 1]$''
+      </span>.
+    </div></li>
+
+  <li><span class="titre">P. 273, reference [3]</span>.
+    <div class="typo">
+      <span style="color:#6633CC;font-weight:bold">
+      ''Distjointness''</span>
+      should be 
+      <span style="color:#6633CC;font-weight:bold">
+      ''Disjointness''</span>.
+    </div></li>
+
+  <li><span class="titre">P. 274, reference [19]</span>.
+    <div class="typo">
+      This reference is to a book and should be formatted as a book.
+    </div></li>
+
+  <li><span class="titre">P. 275, line 11</span>.
+    <div class="typo">
+      <span style="color:#6633CC;font-weight:bold">
+      ''E. Cohen''</span>
+      should be 
+      <span style="color:#6633CC;font-weight:bold">
+      ''H. Cohen''</span>.
+    </div></li>
+
+  <li><span class="titre">P. 276, line 4</span>.
+    <div class="typo">
+      <span style="color:#6633CC;font-weight:bold">
+      $x \ge 2 \cdot 10^6$</span>
+      should be 
+      <span style="color:#6633CC;font-weight:bold">
+      $x \le 2 \cdot 10^6$</span>.
+    </div></li>
+
+  <li><span class="titre">PP. 275--277, proof of Theorem 27-1</span>.
+    <div class="typo">
+      The proof claims that a verification up to $2\cdot 10^6$ is
+      enough, but we need this bound to be $\ge (3500)^2$ and $2\cdot
+      10^6$ is not enough, it should be $13\cdot 10^6$. The same
+      simplistic script proposed works well, but may take some
+      minutes, about three and a half on my laptop.
+      The computations are speeded in the next script.
+<tt>
+<br>{Checkbis(upperlimit) = 
+<br>&nbsp;&nbsp;   my(somme=1.0, bound = 4/log(upperlimit+1));
+<br>&nbsp;&nbsp;   forfactored(K = 2, upperlimit,
+<br>&nbsp;&nbsp;&nbsp;&nbsp;   somme += moebius(K)/eulerphi(K);
+<br>&nbsp;&nbsp;&nbsp;&nbsp;   if(abs(somme) > bound, print("Problem at ", K[1])))};
+</tt>
+<br>
+     This script uses <tt>forfactored</tt> and avoids computing
+     several logarithms, but still takes more than two minutes. It verifies the claimed property for $k \ge
+     14$ and the first script concludes immediately. 
+    </div></li>
+
+  <li><span class="titre">P. 278, line 4</span>.
+    <div class="typo">
+      <span style="color:#6633CC;font-weight:bold">
+      $\frac{2}{25} + \frac{27 \log x}{x^{1/3}} \le 4$</span>
+      should be 
+      <span style="color:#6633CC;font-weight:bold">
+      $\frac{2\cdot 3}{25} + \frac{27 \log x}{x^{1/3}} \le 4$</span>,
+      (add factor for $D(|h_6|,0)$).
+    </div></li>
+
+  <li><span class="titre">P. 279, line 5</span>.
+    <div class="typo">
+      <span style="color:#6633CC;font-weight:bold">
+	``the <i>large sieve</i>. and stems from''
+      </span>
+      should be 
+      <span style="color:#6633CC;font-weight:bold">
+	``the <i>large sieve</i>, and stems from''
+	</span>,
+      (replace period with comma).
+    </div></li>
+
+  <li><span class="titre">P. 281, Exercise 28-3</span>.
+    <div class="typo">
+      <span style="color:#6633CC;font-weight:bold">
+	$\sum_j|f(i,j)|$
+      </span>
+ should be <span style="color:#6633CC;font-weight:bold">
+	$\frac12(\sum_j|f(i,j)|+\sum_j|f(j,i)|)$
+      </span>.
+      The initial inequality is correct if we add the additional
+      hypothesis $f(i,j)=f(j,i)$, which is satisfied in practice.
+    </div></li>
+
+  <li><span class="titre">P. 285, Exercise 28-4</span>.
+    <div class="typo">
+      The notation $S(q;b)$ should better be $S(b;q)$
+      to be coherent with P.291.
+    </div></li>
+
+  <li><span class="titre">P. 285, line 10</span>.
+    <div class="typo">
+      <span style="color:#6633CC;font-weight:bold">
+	$(W^*(d) = q \sum_{\delta | q}$
+      </span>
+      should be 
+      <span style="color:#6633CC;font-weight:bold">
+	$W^*(q) = \sum_{\delta | q}$
+      </span>.
+    </div></li>
+
+  <li><span class="titre">P. 285, line 13</span>.
+    <div class="typo">
+      <span style="color:#6633CC;font-weight:bold">
+	$V^*(d) = q^2 \sum_{\delta | q}$
+      </span>
+      should be 
+      <span style="color:#6633CC;font-weight:bold">
+	$V^*(q) = q \sum_{\delta | q}$
+      </span>.
+    </div></li>
+
+  <li><span class="titre">P. 285, last displayed equation</span>.
+    <div class="typo">
+      <span style="color:#6633CC;font-weight:bold">
+	$\frac{N \log^2 Q}{Q \sqrt{p}}$
+      </span>
+      should be 
+      <span style="color:#6633CC;font-weight:bold">
+	$\frac{N \log Q}{Q \sqrt{p}}$
+      </span>.
+    </div></li>
+
+  <li><span class="titre">P. 286, line 6 from bottom</span>.
+    <div class="typo">
+      <span style="color:#6633CC;font-weight:bold">
+	``almost every pairs''
+      </span>
+      should be 
+      <span style="color:#6633CC;font-weight:bold">
+	``almost every pair''
+      </span>.
+    </div></li>
+
+  <li><span class="titre">P. 292, Exercise 29-2, part 2 and 6</span>.
+    <div class="typo">
+      <span style="color:#6633CC;font-weight:bold">
+	$|\pi^2T \hat{K}(t)|\ge1$ when $|t|\le T$
+      </span>
+      should be
+      <span style="color:#6633CC;font-weight:bold">
+	$|\pi^2T \hat{K}(t)|\ge1$ when $|t|\le T/2$
+      </span>.
+      <br>
+      As a consequence, the integral in part 6 should be
+      $\int_{-T/2}^{T/2}$ and <i>not</i> $\int_{-T}^{T}$.
+    </div></li>
+
+  <li><span class="titre">P. 293, Exercise 29-3</span>.
+    <div class="typo">
+      The statement of part 2 is not clear. It should be
+``Enumerate the triples $(n, n+2, n+4)$ where $n \le 3^{100}$ 
+and each element of the ordered triple is a prime power.''
+    </div></li>
+
+ <li><span class="titre">P. 294, Exercise 29.8 title</span>.
     <div class="typo">
       <span style="color:#6633CC;font-weight:bold">Erd</span>
  should be <span style="color:#6633CC;font-weight:bold">Erd&#337;s</span>.
     </div></li>
 
+  <li><span class="titre">P. 295, reference [4]</span>.
+    <div class="typo">
+      <span style="color:#6633CC;font-weight:bold">
+	$2^k \ p$
+      </span>
+ should be <span style="color:#6633CC;font-weight:bold">
+	$2^k + p$
+	</span>.
+    </div></li>
+
+  <li><span class="titre">P. 295, reference [8]</span>.
+    <div class="typo">
+      <span style="color:#6633CC;font-weight:bold">
+	$p \ 2^k$
+      </span>
+ should be <span style="color:#6633CC;font-weight:bold">
+	$p + 2^k$
+	</span>.
+    </div></li>
+
+  <li><span class="titre">P. 295, references [9] and [12]</span>.
+    <div class="typo">
+      These references are to books and should be formatted as books.
+    </div></li>
+
+  <li><span class="titre">P. 295, reference [14]</span>.
+    <div class="typo">
+      <span style="color:#6633CC;font-weight:bold">
+	``14 O. Ramar&eacute;''
+      </span>
+      should be <span style="color:#6633CC;font-weight:bold">
+	``O. Ramar&eacute;''
+	</span>.
+    </div></li>
+
+ 
+
+  <li><span class="titre">P. 318, Hint for 23-3</span>.
+    <div class="typo">
+      Lemma 19.2 should be Lemma 19.1.
+    </div></li>
+
+  <li><span class="titre">P. 318, Hint for 23-8</span>.
+    <div class="typo">
+      Lemma 12.2.1 should be Lemma 12.2.
+    </div></li>
+
+  <li><span class="titre">P. 320, line 13 from bottom</span>.
+    <div class="typo">
+      <span style="color:#6633CC;font-weight:bold">
+	<tt>for(y = 1, x,</tt>
+      </span>
+      should be 
+      <span style="color:#6633CC;font-weight:bold">
+	<tt>for(y = begx, endx,</tt>
+      </span>.
+    </div></li>
+
+  <li><span class="titre">P. 324, line 12</span>.
+    <div class="typo">
+      <span style="color:#6633CC;font-weight:bold">
+	$\hat{K}(t)$
+      </span>
+      should be 
+      <span style="color:#6633CC;font-weight:bold">
+	$\hat{K}(t) \pi^2 T$
+      </span>.
+    </div></li>
+
+  <li><span class="titre">P. 325, line 1</span>.
+    <div class="typo">
+      <span style="color:#6633CC;font-weight:bold">
+	``ofenly''
+      </span>
+      should be 
+      <span style="color:#6633CC;font-weight:bold">
+	''often''
+      </span>.
+    </div></li>
 
   <li><span class="titre">P. 330, item 8</span>.
     <div class="typo">
