--- a/index.html
+++ b/index.html
@@ -196,12 +196,12 @@ MathJax.Hub.Config({
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </td>
 <td style="vertical-align:bottom;border:3px solid  #F4F4E9;">
-  <a href="http://math.univ-lille1.fr/~nwejm/"><img src="trucs/grandMoulin.jpg"
+  <a href="https://nwejm.univ-lille.fr/"><img src="trucs/grandMoulin.jpg"
   width="120pt" style="padding-left:2pt;"></a> 
 </td>
 <td style="vertical-align:bottom;">
     <span style="font-variant:small-caps;font-weight:bold;">
-      <a href="http://math.univ-lille1.fr/~nwejm/"><font size=+1>The North-Western European Journal of Mathematics</font></a> 
+      <a href="https://nwejm.univ-lille.fr/"><font size=+1>The North-Western European Journal of Mathematics</font></a> 
     </span>
     <br><br><i>
       &nbsp;&nbsp;An academic and non-profit journal from Lille
