--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1043,7 +1043,7 @@ $\sum_{q^{20r}\le s \le q^{20r}+q^{16r}}e(sa/q)\ll q^{16r}(\log q)/\sqrt{\varphi
 	Paper("Notes on restriction theory in the primes",
 	      "", "RestrictionTheory-IJM-06.pdf",
 	      "https://link.springer.com/journal/11856",
-	      "Israel Journal of Math.", "vol. ", 2023, "22pp",
+	      "Israel Journal of Math.", "vol. 261", 2024, "717--738",
 	      "https://link.springer.com/article/10.1007/s11856-023-2586-5");
 	nbr();</script>
       <div class="resumecontent">We study the mean
