--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -453,7 +453,7 @@ of A. S&aacute;rk&ouml;zy.
 	ToAppear("A spectral resolution of the large sieve",
 	      "", "LSE-46-N-04-submitted-1.pdf",
 	      "https://smf.emath.fr/publications/bulletin-de-la-societe-mathematique-de-france",
-	      "Bulletin de la Société Mathématique de France", 2024, 63);
+	      "Bulletin de la SociÃ©tÃ© MathÃ©matique de France", 2024, 63);
 	nbr();</script>
       <div class="resumecontent">
 	The quadratic form
@@ -1063,10 +1063,12 @@ $\sum_{q^{20r}\le s \le q^{20r}+q^{16r}}e(sa/q)\ll q^{16r}(\log q)/\sqrt{\varphi
   </li>
  <!-- ============================= -->
     <li class="paper"><script language="javascript">
-	ToAppear("Exponential sums over primes with multiplicative  coefficients",
+	Paper("Exponential sums over primes with multiplicative  coefficients",
 		 "G. Kasi Viswanadham",
 	"OR_KV_ new_version-06.pdf","https://www.springer.com/journal/209",
-	"Mathematische Zeitschrift", 2023, 21);
+	      "Mathematische Zeitschrift", " vol. 304 no 3", 2023,
+	      "Paper no 50, 20pp",
+	      "https://link.springer.com/article/10.1007/s00209-023-03305-7");
 	nbr();</script>
       <div class="resumecontent">
 <img src="../trucs/kasi-viswanadh.jpeg" height="110px"
