--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1096,7 +1096,7 @@ $q\le X^{(1-\eta)/15}$. Under
 stronger restrictions and the same conditions on $\alpha$ and
 $a/q$, we also prove that
 $
-\sum_{X < \ell\leq 2X} a_g(\ell)\mu(\ell) e(p\alpha)\ll X/\sqrt{q}\;.
+\sum_{X < \ell\leq 2X} a_g(\ell)\mu(\ell) e(\ell\alpha)\ll X/\sqrt{q}\;.
 $ 
       </div>
       </li>
