--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1550,9 +1550,9 @@ primes in any given class of $H_{\mathfrak{q}}(\mathbb{K})$.
     <li class="paper preprint"><script language="javascript">
 	ToAppear("An application of counting ideals in ray classes",
 	"Sanoli Gun and Jyothsnaa Sivaraman", 
-		 "",
+		 "doiA-aa230406-10-6.pdf",
 		 "https://www.impan.pl/en/publishing-house/journals-and-series/acta-arithmetica",
-		 "Acta Arithmetica", 2024, 20 );
+		 "Acta Arithmetica", 2024, 23 );
 	nbr();</script>
       <div class="resumecontent">
 	<img src="../trucs/Sanoli.jpeg" height="110px"
