--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1334,6 +1334,31 @@ $
   and $|L(1, \chi)|\leq \frac{9}{20}\log q$ for all $q\geq 5\cdot 10^{50}$.
     </div>
   </li>
+  <!-- ============================= -->
+    <li class="paper preprint"><script language="javascript">
+	Preprint("Explicit count of integral ideals of an imaginary quadratic field",
+	, "ConvolutionAndVoronoi-from05-08-Arxiv.pdf", 2023, 9, "Submitted");
+	nbrp();      </script>
+      <div class="resumecontent">
+       We provide explicit bounds for the number of integral ideals of
+  norms at most~$X$ is $\mathbb{Q}[\sqrt{d}]$ when $d <0$ is a
+  fundamendal discriminant with an error term of size
+  $\mathcal(X^{1/3})$. In particular, we prove that, when $\chi$
+  is the non-principal character modulo~$3$ and $X\ge1$, we have
+  $\sum_{n\le X}(\1\star\chi)(n)
+    =
+    \frac{\pi X}{3\sqrt{3}}
+    +\mathcal{O}^*(
+    1.94\,X^{1/3})$, and that , when $\chi$
+  is the non-principal character modulo~$4$ and $X\ge1$, we have
+  $\sum_{n\le X}(\1\star\chi)(n)
+    =
+ \frac{\pi X}{4}
+    +\mathcal{O}^*(
+    1.4\,X^{1/3}
+    )$.
+    </div>
+  </li>
 
   </ol><br>
   </li>
