--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1337,7 +1337,7 @@ $
   <!-- ============================= -->
     <li class="paper preprint"><script language="javascript">
 	Preprint("Explicit count of integral ideals of an imaginary quadratic field",
-	, "ConvolutionAndVoronoi-from05-08-Arxiv.pdf", 2023, 9, "Submitted");
+	"", "ConvolutionAndVoronoi-from05-08-Arxiv.pdf", 2023, 9, "Submitted");
 	nbrp();      </script>
       <div class="resumecontent">
        We provide explicit bounds for the number of integral ideals of
@@ -1348,15 +1348,10 @@ $
   $\sum_{n\le X}(\1\star\chi)(n)
     =
     \frac{\pi X}{3\sqrt{3}}
-    +\mathcal{O}^*(
-    1.94\,X^{1/3})$, and that , when $\chi$
+    +\mathcal{O}^*(1.94\,X^{1/3})$, and that , when $\chi$
   is the non-principal character modulo~$4$ and $X\ge1$, we have
   $\sum_{n\le X}(\1\star\chi)(n)
-    =
- \frac{\pi X}{4}
-    +\mathcal{O}^*(
-    1.4\,X^{1/3}
-    )$.
+    = \frac{\pi X}{4} +\mathcal{O}^*( 1.4\,X^{1/3})$.
     </div>
   </li>
 
