--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1341,10 +1341,10 @@ $
 	nbrp();      </script>
       <div class="resumecontent">
        We provide explicit bounds for the number of integral ideals of
-  norms at most~$X$ is $\mathbb{Q}[\sqrt{d}]$ when $d <0$ is a
+  norms at most~$X$ is $\mathbb{Q}[\sqrt{d}]$ when $d < 0$ is a
   fundamendal discriminant with an error term of size
   $\mathcal(X^{1/3})$. In particular, we prove that, when $\chi$
-  is the non-principal character modulo~$3$ and $X\ge1$, we have
+  is the non-principal character modulo 3 and $X\ge1$, we have
   $\sum_{n\le X}(\1\star\chi)(n)
     =
     \frac{\pi X}{3\sqrt{3}}
