--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -139,11 +139,11 @@ MathJax.Hub.Config({
 <center>
 <font size=+2 color=#CC9933>
 <i>
-&laquo;M&eacute;fiez-vous des 
+M&eacute;fiez-vous des 
 <span title=
 "Ces beaux-parleurs pr&eacute;tendront vous montrer
 le fond de choses alors qu'ils n'y sont jamais all&eacute;">montreurs d'ours</span>, tr&egrave;s peu
-en ont captur&eacute;s&raquo;
+en ont captur&eacute;s.
 </i>
 </font>
 </center>
