--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -911,6 +911,30 @@ all moduli $k \le 72$&nbsp; and other small moduli.
   </li>
  
   <li class="paper preprint"><script language="javascript">
+      Preprint("From explicit estimates for the primes to explicit estimates for the Moebius function -- II",
+	       "Sebastian Zuniga Alterman",
+               "From-explicit-estimates-for-the-primes-to-explicit-estimates-for-the-Mobius-function-II-11.pdf", 2024, 16, "Submitted");
+      nbrp();</script>
+    <div class="resumecontent">
+      <img src="../trucs/Sebastian.jpg" width="128px"
+	   title="Sebastian Zuniga Alterman">
+      We improve on all the results of the paper ``From explicit estimates
+  for the primes to explicit estimates for the M\"obius function''
+  by the first author by incorporating the finite
+  range computations performed since then by several authors. Thus we
+  have
+  \begin{align*}
+    \Bigg|\sum_{n\le X}\mu(n)\Bigg|
+    &\le \frac{0.006688\,X}{\Log X},&&\text{for } X\ge 1\,798\,118,\\
+    \Bigg|\sum_{n\le X}\frac{\mu(n)}{n}\Bigg|
+   & \le \frac{0.010032}{\Log X},&& \text{for } X\ge 617\,990.
+  \end{align*}  
+  We also improve on the method described in the earlier paper of the
+      same title by a simple remark.
+    </div>
+  </li>
+ 
+  <li class="paper preprint"><script language="javascript">
       Preprint("A Moebius sum",
 	       "Sebastian Zuniga Alterman",
                "", 2023, 30, "Submitted");
