--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -888,6 +888,30 @@ all moduli $k \le 72$&nbsp; and other small moduli.
   </li>
 
   <li class="paper preprint"><script language="javascript">
+      Preprint("From explicit estimates for the primes to explicit estimates for the Moebius function -- II",
+	       "Sebastian Zuniga Alterman",
+               "From-explicit-estimates-for-the-primes-to-explicit-estimates-for-the-Mobius-function-II-11.pdf", 2024, 16, "Submitted");
+      nbrp();</script>
+    <div class="resumecontent">
+      <img src="../trucs/Sebastian.jpg" width="128px"
+	   title="Sebastian Zuniga Alterman">
+      We improve on all the results of the paper ``From explicit estimates
+  for the primes to explicit estimates for the M\"obius function''
+  by the first author by incorporating the finite
+  range computations performed since then by several authors. Thus we
+  have
+  \begin{align*}
+    \Bigg|\sum_{n\le X}\mu(n)\Bigg|
+    &\le \frac{0.006688\,X}{\log X},&&\text{for } X\ge 1\,798\,118,\\
+    \Bigg|\sum_{n\le X}\frac{\mu(n)}{n}\Bigg|
+   & \le \frac{0.010032}{\log X},&& \text{for } X\ge 617\,990.
+  \end{align*}  
+  We also improve on the method described in the earlier paper of the
+      same title by a simple remark.
+    </div>
+  </li>
+ 
+  <li class="paper preprint"><script language="javascript">
       Preprint("Moebius function and primes: an identity factory with applications",
 	       "Sebastian Zuniga Alterman and Michel Balazard",
                "BV-Mobius-IdentityFactory.pdf", 2023, 30, "Submitted");
@@ -907,30 +931,6 @@ all moduli $k \le 72$&nbsp; and other small moduli.
 	X}\Lambda(n)/n\le \log X$.
 	<br> An appendix by Michel Balazard uses a similar setting to prove
 	  that $\sum_{n\le x}\Lambda(n)/n\le \log x$.
-    </div>
-  </li>
- 
-  <li class="paper preprint"><script language="javascript">
-      Preprint("From explicit estimates for the primes to explicit estimates for the Moebius function -- II",
-	       "Sebastian Zuniga Alterman",
-               "From-explicit-estimates-for-the-primes-to-explicit-estimates-for-the-Mobius-function-II-11.pdf", 2024, 16, "Submitted");
-      nbrp();</script>
-    <div class="resumecontent">
-      <img src="../trucs/Sebastian.jpg" width="128px"
-	   title="Sebastian Zuniga Alterman">
-      We improve on all the results of the paper ``From explicit estimates
-  for the primes to explicit estimates for the M\"obius function''
-  by the first author by incorporating the finite
-  range computations performed since then by several authors. Thus we
-  have
-  \begin{align*}
-    \Bigg|\sum_{n\le X}\mu(n)\Bigg|
-    &\le \frac{0.006688\,X}{\Log X},&&\text{for } X\ge 1\,798\,118,\\
-    \Bigg|\sum_{n\le X}\frac{\mu(n)}{n}\Bigg|
-   & \le \frac{0.010032}{\Log X},&& \text{for } X\ge 617\,990.
-  \end{align*}  
-  We also improve on the method described in the earlier paper of the
-      same title by a simple remark.
     </div>
   </li>
  
@@ -1367,12 +1367,12 @@ $
   fundamendal discriminant with an error term of size
   $\mathcal(X^{1/3})$. In particular, we prove that, when $\chi$
   is the non-principal character modulo 3 and $X\ge1$, we have
-  $\sum_{n\le X}(\1\star\chi)(n)
+  $\sum_{n\le X}(1\star\chi)(n)
     =
     \frac{\pi X}{3\sqrt{3}}
     +\mathcal{O}^*(1.94\,X^{1/3})$, and that , when $\chi$
   is the non-principal character modulo~$4$ and $X\ge1$, we have
-  $\sum_{n\le X}(\1\star\chi)(n)
+  $\sum_{n\le X}(1\star\chi)(n)
     = \frac{\pi X}{4} +\mathcal{O}^*( 1.4\,X^{1/3})$.
     </div>
   </li>
