--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1569,10 +1569,12 @@ $
  explicit bound for the error term.
       </div>
   <!-- ============================= -->
-    <li class="paper preprint"><script language="javascript">
-	Preprint("Representing ideal classes of ray class groups by product of prime ideals of small size",
+    <li class="paper"><script language="javascript">
+	ToAppear("Representing ideal classes of ray class groups by product of prime ideals of small size",
 	"Jean-Marc Deshouillers, Sanoli Gun and Jyothsnaa Sivaraman", 
-		 "", 2022, 36,"");
+		 "",
+		 "https://www.springer.com/journal/209",
+	      "Mathematische Zeitschrift", 2025, 36);
 	nbrp();</script>
       <div class="resumecontent">
 	<img src="../trucs/JMD.jpeg" height="110px"
@@ -2138,7 +2140,7 @@ non-residue. We obtain strong explicit bounds on $p$, depending on the
 analytic conductor of $f$ for some specific choices of $I$.  
 </div>
   <!-- ============================= -->
-<li class="paper preprint"><script language="javascript">
+<li class="paper"><script language="javascript">
       ToAppear("Convolution of periodic multiplicative functions and the divisor problem",
 	       "Marco Aymone, Gopal Maiti and Priyamvad Srivasta" ,
 	       "divisor-omega.pdf",
