--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1575,7 +1575,7 @@ $
 		 "",
 		 "https://www.springer.com/journal/209",
 	      "Mathematische Zeitschrift", 2025, 36);
-	nbrp();</script>
+	nbr();</script>
       <div class="resumecontent">
 	<img src="../trucs/JMD.jpeg" height="110px"
 	     title="Jean-Marc Deshouillers">
