--- a/ServeurPerso/Past-Future/Past-Future.html
+++ b/ServeurPerso/Past-Future/Past-Future.html
@@ -107,14 +107,8 @@
       <img src="BestBirthdayParty2025-small.jpg" width="170" />
     </td>
     <td>
-      <img src="Berhampur-2025-AllWet.jpg" width="250"
+      <img src="Berhampur-2025-AllWet-small.jpg" width="250"
 	   title="Berhampur 2025, the wet ones!" />
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <img src="Madeline.jpg" width="250"
-      title="Madeline 2013" />
     </td>
   </tr>
 </table>
