--- a/ServeurPerso/Past-Future/Past-Future.html
+++ b/ServeurPerso/Past-Future/Past-Future.html
@@ -111,6 +111,12 @@
 	   title="Berhampur 2025, the wet ones!" />
     </td>
   </tr>
+  <tr>
+    <td>
+      <img src="Friends-small.jpg" width="250"
+	   title="Friends" />
+    </td>
+  </tr>
 </table>
 
 
