--- a/Jeux/Solitaire/Solitaire.html
+++ b/Jeux/Solitaire/Solitaire.html
@@ -283,7 +283,10 @@ position d'arriv&eacute;e : il s'agit du probl&egrave;me &agrave;
 <br />
 <br /> 
 <i><font size=+1>&Eacute;tude d'un probl&egrave;me ...</font></i>
-
+<input type="button" id="ProblemeIni" 
+       style="width:250px;background-color:#FFFF99"
+       onClick="window.Set_Etude_Graphique_ini()"
+       value="D&eacute;finir un probl&egrave;me">
 <br />
 <br />
 <!-- ------------------------------------------------------------------------ -->
