--- a/Jeux/Solitaire/Solitaire.html
+++ b/Jeux/Solitaire/Solitaire.html
@@ -214,7 +214,7 @@ position d'arriv&eacute;e : il s'agit du probl&egrave;me &agrave;
                 <input type="button" id="VerrouPlateau" 
                        style="width:250px;background-color:#FFFF99"
                        onClick="window.Plateau_Graphique_toggle_verrou()"
-                       value="Verouiller le plateau">
+                       value="Verrouiller le plateau">
                 </td></tr>
           </table>
         </form>
