--- a/Jeux/Solitaire/Solitaire.html
+++ b/Jeux/Solitaire/Solitaire.html
@@ -285,7 +285,7 @@ position d'arriv&eacute;e : il s'agit du probl&egrave;me &agrave;
 <i><font size=+1>&Eacute;tude d'un probl&egrave;me ...</font></i>
 <input type="button" id="ProblemeIni" 
        style="width:250px;background-color:#FFFF99"
-       onClick="window.Set_Etude_Graphique_ini()"
+       onClick="window.Plateau_Graphique_set_plateau()"
        value="D&eacute;finir un probl&egrave;me">
 <br />
 <br />
@@ -313,9 +313,6 @@ position d'arriv&eacute;e : il s'agit du probl&egrave;me &agrave;
               <!-- ----------------------------------------------------- -->  
               <!-- ----------------------------------------------------- -->
             </SCRIPT>
-             <tr><td>
-                <font style="font-weight:bold;font-size:300%">?</font>
-            </td></tr>
           </table>
         </td>
         <td>
@@ -348,8 +345,6 @@ position d'arriv&eacute;e : il s'agit du probl&egrave;me &agrave;
               <!-- ----------------------------------------------------- -->  
               <!-- ----------------------------------------------------- -->
             </SCRIPT>
-                <font style="font-weight:bold;font-size:300%">?</font>
-            </td></tr>
           </table>
         </td>
         <td>
