--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -2244,16 +2244,17 @@ analytic conductor of $f$ for some specific choices of $I$.
 
   <BR>
 
-<!-- =====================================================
-<center>
-<img src="../trucs/MassifCentralLac2014.jpg" width="250px"
-     class="InTheMiddle"
-     title="Massif Central (2014)">
-<img src="../trucs/MassifCentralChamps2014.jpg" width="300px"
-     class="InTheMiddle"
-     title="Massif Central (2014)">
+<br>
+    <center>
+      <a href="../trucs/CVOlivierRamareBySumaia.jpg">
+	<font face="Comic sans MS" size="+2" color="black">
+	  <it> My paper pile &#128513;, by Sumaia Saad Eddin (2025)
+	  </it>
+	</font>
+      </a>
 </center>
-======================================================== -->
+    <br>
+      <br>
 
 <!-- ================================================================= -->
 <!-- ================================================================= -->
