--- a/Jeux/Solitaire/Solitaire.html
+++ b/Jeux/Solitaire/Solitaire.html
@@ -68,7 +68,7 @@ augmentera. Le probl&egrave;me principal &eacute;tant en ce moment de
 convertir mes programmes personnels &eacute;crits en C et notamment GTK en
 Java. La base de pr&eacute;sentation est en javascript et la voici~!
 Cette version est brid&eacute;e : aucun probl&egrave;me de plus de 10
-mouvements ne peut &ecirc;tre r&eacute;solue. Je mettrai en place un
+mouvements ne peut &ecirc;tre r&eacute;solu. Je mettrai en place un
 certificat pour d&eacute;brider l'automate plus tard :)
 </i>
 </blockquote>
